--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "global": "^4.4.0",
     "image-to-base64": "^2.1.1",
     "lodash": "^4.17.20",
-    "node-sass": "^6.0.1",
+    "node-sass": "^9.0.0",
     "object-path": "^0.11.5",
     "perfect-scrollbar": "1.5.0",
     "qs": "^6.9.4",
@@ -102,6 +102,7 @@
     "redux": "4.0.5",
     "redux-persist": "6.0.0",
     "redux-saga": "1.1.3",
+    "sass": "^1.82.0",
     "secp256k1": "4.0.2",
     "sha256": "0.2.0",
     "socicon": "3.0.5",
