--- a/.env.docker
+++ b/.env.docker
@@ -1,5 +1,5 @@
-REACT_APP_API_BASE_URL=http://112.137.129.158:8080/api
-# REACT_APP_API_BASE_URL=http://localhost:2999/api
+# REACT_APP_API_BASE_URL=http://112.137.129.158:8080/api
+REACT_APP_API_BASE_URL=http://localhost:3000/api
 REACT_APP_ENV="development"
 REACT_APP_PUBLIC_URL=""
 PORT=3433
